# aykonet

./: AykoNet_Pro.ipynb  CMakeLists.txt  README.md  pico_sdk_import.cmake
model/: traffic_sign_model_data.cc  traffic_sign_model_data.h
notebooks/: AykoNet_Lite.ipynb  GiordyNet.ipynb  MobileNet_V1_20.ipynb  MobileNet_V1_25.ipynb
src/: detection_responder.cpp  detection_responder.h  hm01b0.c  hm01b0.h  image_provider.cpp  image_provider.h  main.cpp  main_functions.cpp  main_functions.h  model_settings.cpp  model_settings.h  test_images.h
